# kmc-invoice

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  requirements.txt  settings.json
app/: main.py  shell.py  ui_main.py
app/core/: currency.py  numbering.py  paths.py  settings.py
app/data/: db.py  models.py  repo.py
app/pdf/: __init__.py  invoice_generator.py  pdf_draw.py  pdf_merge.py  pdf_overlay.py  table_layout.py
app/printing/: print_windows.py
app/styles/: themes.py  tokens.py
app/views/: customers_view.py  invoices_view.py  placeholders.py
app/widgets/: customers_dialog.py  drafts_dialog.py  invoice_form.py  invoices_dialog.py  line_items_table.py  line_items_widget.py  preview_dialog.py  settings_dialog.py
assets/: overlay_offsets.json
tests/: test_invoice_pdf.py  test_navigation.py
tools/: __init__.py  build.ps1  create_png_snapshot.py  db_smoke_tool.py  diagnostics.py  make_sample_pdf.py  make_sample_pdf_drawn.py  make_sample_pdf_drawn2.py  overlay_calibrator.py  print_sample_invoice.py  qa_checklist.txt  run_migrations.py  smoke_test.py  test_invoice_table.py  verify_table_styling.py
